# koalaci-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
ci/: run.sh  stop.sh
ci/dockerfiles/: Dockerfile  build.sh  entrypoint.sh
src/: job.rs  main.rs  redis_instance.rs
src/controllers/: job.rs
src/middlewares/: mod.rs  with_auth.rs  with_model.rs
src/models/: job.rs  mod.rs  model.rs
src/routers/: job.rs  mod.rs  routes.rs
