[package]
name = "koalaci"
version = "0.1.0"
authors = ["Fariz Rizaldy <fariz@evilfactory.id>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
redis = "0.15.1"
warp = "0.2"
jsonwebtoken = "7"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["full"]
